<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yangtt.personal.testjni_saas.AC_Crash">
    <Button
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_java_crash"
        android:textAllCaps="false"
        android:id="@+id/btJavaCrash"/>
    <Button
        app:layout_constraintTop_toBottomOf="@id/btJavaCrash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_java_crash_net"
        android:textAllCaps="false"
        android:id="@+id/btJavaCrashWithNet"/>
    <Button
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btJavaCrashWithNet"
        android:text="@string/tx_native_crash"
        android:id="@+id/bt_nativeCrash"/>
    <Button
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_nativeCrash"
        android:text="@string/tx_native_interface"
        android:id="@+id/bt_nativeInterface"/>
    <Button
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_nativeInterface"
        android:text="@string/tx_crash_on_resume"
        android:id="@+id/bt_crash_on_resume"/>
    <Button
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_crash_on_resume"
        android:text="@string/tx_button1"
        android:id="@+id/bt_startAC"/>
    <Button
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_startAC"
        android:text="@string/tx_button2"
        android:id="@+id/bt_2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_2"
        android:text="Java2C"
        android:id="@+id/bt_3"/>
    <TextView
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_3" />

</androidx.constraintlayout.widget.ConstraintLayout>
